[CI] more testing