@@ -63,10 +63,8 @@ public class Infrastructure {
 
     private static final DebeziumContainer DEBEZIUM_CONTAINER =
             new DebeziumContainer(DockerImageName.parse("debezium/connect:nightly"))
-                    .withEnv("HEAP_OPTS", "-Xmx512M -Xms512M")
                     .withEnv("ENABLE_DEBEZIUM_SCRIPTING", "true")
                     .withEnv("CONNECT_REST_EXTENSION_CLASSES", "io.debezium.kcrestextension.DebeziumConnectRestExtension")
-                    .withEnv("KAFKA_OPTS", "--illegal-access=permit")
                     .withNetwork(NETWORK)
                     .withKafka(KAFKA_CONTAINER.getNetwork(), KAFKA_HOSTNAME + ":9092")
                     .withLogConsumer(new Slf4jLogConsumer(LOGGER))
